test/expected/explain_vftsrk_v.out
explain virtual void f( this S &self )
                               ^
32: error: function with "this" parameter can not be "virtual"
